added configuration server name parsing

--- a/small_config.config
+++ b/small_config.config
@@ -1,5 +1,10 @@
 http {
 	server {
-		listen	9090;
+		# If no port given, defaults to 8080
+		listen	127.0.0.1:9090;
+		server_name	lol lel;
+	}
+	server {
+		listen 80;
 	}
 }
