--- a/small_config.conf
+++ b/small_config.conf
@@ -1,8 +1,8 @@
-http {
+http { 
 	server {
 		# If no port given, defaults to 8080
-		listen	127.0.0.1:9090;
-		server_name	lol lel;
+		listen			127.0.0.1:9090;
+		server_name		lol "le l";
 	}
 	server {
 		listen 80;
