added more config file parsing added error_page config directive added client_max_body_size directive added byte string conversion to unsigned long in tool::strings namespace

--- a/small_config.conf
+++ b/small_config.conf
@@ -1,8 +1,13 @@
 http { 
 	server {
 		# If no port given, defaults to 8080
-		listen			127.0.0.1:9090;
-		server_name		lol "le l";
+		listen		127.0.0.1:9090;
+		server_name	lol "le l";
+
+		error_page	404 405			/404.html;
+		error_page	500 502 503 504	/50x.html;
+
+		client_max_body_size	1m;
 	}
 	server {
 		listen 80;
