--- a/small_config.conf
+++ b/small_config.conf
@@ -8,6 +8,10 @@ http {
 		error_page	500 502 503 504	/50x.html;
 
 		client_max_body_size	1m;
+
+		location / {
+			autoindex on;
+		}
 	}
 	server {
 		listen 80;
