more location parsing added allowed methods for locations fixed LocationComfiguration operator< not working

--- a/small_config.conf
+++ b/small_config.conf
@@ -11,6 +11,11 @@ http {
 
 		location / {
 			autoindex on;
+			limit_except GET POST;
+		}
+
+		location /images/ {
+			autoindex off;
 		}
 	}
 	server {
