more location parsing added return implementation with error management

--- a/small_config.conf
+++ b/small_config.conf
@@ -16,8 +16,11 @@ http {
 
 		location /images/ {
 			autoindex off;
+			return 403;
+			return 301 http://www.google.com;
 		}
 	}
+
 	server {
 		listen 80;
 	}
