added more location parsing added root and index parsing for server location block added root and index parsing for server block server index and root settings are the default index and root location settings

--- a/small_config.conf
+++ b/small_config.conf
@@ -3,6 +3,7 @@ http {
 		# If no port given, defaults to 8080
 		listen		127.0.0.1:9090;
 		server_name	lol "le l";
+		root		/var/www;
 
 		error_page	404 405			/404.html;
 		error_page	500 502 503 504	/50x.html;
@@ -10,15 +11,16 @@ http {
 		client_max_body_size	1m;
 
 		location / {
-			autoindex on;
-			limit_except GET POST;
+			autoindex		on;
+			limit_except	GET POST;
+			index			index2.html;
 		}
 
 		location /images/ {
-			root	.;
-			autoindex off;
-			return 403;
-			return 301 http://www.google.com;
+			root		.;
+			autoindex	off;
+			return		403;
+			return		301 http://www.google.com;
 		}
 	}
 
