even more location parsing added fastcgi_pass and fastcgi_param directives to location parsing improved print methods for Configuration and LocationConfiguration

--- a/small_config.conf
+++ b/small_config.conf
@@ -19,8 +19,12 @@ http {
 		location /images/ {
 			root		.;
 			autoindex	off;
+
 			return		403;
 			return		301 http://www.google.com;
+
+			fastcgi_param	TEST testval;
+			fastcgi_pass	unix:/tmp/fastcgi.sock;
 		}
 	}
 
