--- a/webserv.conf
+++ b/webserv.conf
@@ -4,6 +4,7 @@ http {
 		listen		127.0.0.1:9090;
 		server_name	lol "le l";
 		root		/var/www;
+		backlog		10;
 
 		error_page	404 405			/404.html;
 		error_page	500 502 503 504	/50x.html;
