added primitive directory request management added tool::files::readFile function to return a file to string conversion added location index and autoindex management

--- a/webserv.conf
+++ b/webserv.conf
@@ -14,7 +14,8 @@ http {
 		location / {
 			autoindex		on;
 			limit_except	GET POST;
-			index			index2.html;
+			root			/var/www/html;
+			index			index.html;
 		}
 
 		location /images/ {
