--- a/webserv.conf
+++ b/webserv.conf
@@ -9,7 +9,7 @@ http {
 		error_page	404 405			/404.html;
 		error_page	500 502 503 504	/50x.html;
 
-		client_max_body_size	1m;
+		client_max_body_size	1;
 
 		location / {
 			autoindex		on;
