--- a/webserv.conf
+++ b/webserv.conf
@@ -9,13 +9,18 @@ http {
 		error_page	404 405			/404.html;
 		error_page	500 502 503 504	/50x.html;
 
-		client_max_body_size	1;
+		client_max_body_size	1m;
 
 		location / {
 			autoindex		on;
 			limit_except	GET POST;
 			root			/var/www/html;
 			index			index.html;
+		}
+
+		location /www/ {
+			autoindex	on;
+			root		/var;
 		}
 
 		location /images/ {
