added basic GET file management || added www directory with test files implemented file response if file is requested with existance/access check added www local directory to route to

--- a/conf.d/webserv.conf
+++ b/conf.d/webserv.conf
@@ -18,9 +18,21 @@ http {
 			index			index.html;
 		}
 
+		location /hnogared {
+			autoindex		on;
+			limit_except	GET;
+			root			/home/;
+		}
+
+		location /test {
+			autoindex		off;
+			limit_except	POST;
+		}
+
 		location /www/ {
-			autoindex	on;
-			root		/var;
+			autoindex		off;
+			root			.;
+			index			index.html;
 		}
 
 		location /images/ {
