implemented file extension mime type sending

--- a/test/conf.d/webserv.conf
+++ b/test/conf.d/webserv.conf
@@ -3,7 +3,7 @@ http {
 		# If no port given, defaults to 8080
 		listen		9090;
 		server_name	lol "le l";
-		root		/var/www;
+		root		test/www;
 		backlog		10;
 
 		error_page	404 405			/404.html;
@@ -18,20 +18,9 @@ http {
 			index			index.html;
 		}
 
-		location /hnogared {
-			autoindex		on;
-			limit_except	GET;
-			root			/home/;
-		}
-
-		location /test {
-			autoindex		off;
-			limit_except	POST;
-		}
-
 		location /www/ {
 			autoindex		off;
-			root			.;
+			root			test/www;
 			index			index.html;
 		}
 
@@ -49,5 +38,11 @@ http {
 
 	server {
 		listen 9090;
+
+		location /hnogared {
+			autoindex		on;
+			limit_except	GET;
+			root			/home/;
+		}
 	}
 }
