--- a/test/conf.d/webserv.conf
+++ b/test/conf.d/webserv.conf
@@ -3,7 +3,7 @@ http {
 		# If no port given, defaults to 8080
 		listen		9090;
 		server_name	lol "le l";
-		root		test/www;
+		root		test/www/webserv;
 		backlog		10;
 
 		error_page	404 405			/404.html;
@@ -14,7 +14,6 @@ http {
 		location / {
 			autoindex		on;
 			limit_except	GET POST;
-			root			/var/www/html;
 			index			index.html;
 		}
 
@@ -43,6 +42,12 @@ http {
 			autoindex		on;
 			limit_except	GET;
 			root			/home/;
+		}
+
+		location /html {
+			autoindex		on;
+			root			/var/www/;
+			index			index.html;
 		}
 	}
 }
