--- a/test/conf.d/webserv.conf
+++ b/test/conf.d/webserv.conf
@@ -13,13 +13,7 @@ http {
 
 		location / {
 			autoindex		on;
-			limit_except	GET POST;
-			index			index.html;
-		}
-
-		location /www/ {
-			autoindex		off;
-			root			test/www;
+			allow_methods	GET POST;
 			index			index.html;
 		}
 
@@ -38,16 +32,21 @@ http {
 	server {
 		listen 9090;
 
-		location /hnogared {
-			autoindex		on;
-			limit_except	GET;
-			root			/home/;
-		}
-
 		location /html {
-			autoindex		on;
+			autoindex		off;
 			root			/var/www/;
 			index			index.html;
+		}
+	}
+
+	server {
+		listen	4242;
+		index	index2.html;
+
+		location /hnogared {
+			autoindex		on;
+			allow_methods	GET;
+			root			/home/;
 		}
 	}
 }
