--- a/test/conf.d/webserv.conf
+++ b/test/conf.d/webserv.conf
@@ -2,7 +2,6 @@ http {
 	server {
 		# If no port given, defaults to 8080
 		listen		9090;
-		server_name	lol "le l";
 		root		test/www/webserv;
 		backlog		10;
 
@@ -30,7 +29,8 @@ http {
 	}
 
 	server {
-		listen 9090;
+		listen		127.0.2.1:9090;
+		server_name	www.mywebsite.com mywebsite.com;
 
 		location /html {
 			autoindex		off;
