--- a/test/conf.d/webserv.conf
+++ b/test/conf.d/webserv.conf
@@ -5,8 +5,8 @@ http {
 		root		test/www/webserv;
 		backlog		10;
 
-		error_page	404 405			/error_pages/404.html;
-		#error_page	500 502 503 504	/50x.html;
+		error_page	404				/error_pages/404.html;
+		error_page	500 502 503 504	/error_pages/50x.html;
 
 		client_max_body_size	1m;
 
