added HEAD requests management

--- a/test/conf.d/webserv.conf
+++ b/test/conf.d/webserv.conf
@@ -12,7 +12,7 @@ http {
 
 		location / {
 			autoindex		on;
-			allow_methods	GET POST;
+			allow_methods	GET POST HEAD;
 			index			index.html;
 		}
 
