--- a/test/conf.d/webserv.conf
+++ b/test/conf.d/webserv.conf
@@ -11,9 +11,12 @@ http {
 		client_max_body_size	1m;
 
 		location / {
-			autoindex		on;
-			allow_methods	GET POST HEAD PUT;
 			index			index.html;
+		}
+
+		location /sandbox {
+			autoindex		on;
+			allow_methods	all;
 		}
 
 		location /images/ {
@@ -45,7 +48,6 @@ http {
 
 		location /hnogared {
 			autoindex		on;
-			allow_methods	GET;
 			root			/home/;
 		}
 	}
