--- a/test/conf.d/webserv.conf
+++ b/test/conf.d/webserv.conf
@@ -20,14 +20,18 @@ http {
 		}
 
 		location /images/ {
-			root		.;
-			autoindex	off;
+			root			.;
+			autoindex		off;
 
-			return		403;
-			return		301 http://www.google.com;
+			return			403;
+			return			301 http://www.google.com;
 
 			fastcgi_param	TEST testval;
 			fastcgi_pass	unix:/tmp/fastcgi.sock;
+		}
+
+		location /redirect {
+			return			302 "Hello World !";
 		}
 	}
 
