implemented prefix/suffix/exact location uri matching for finding the best location for a request

--- a/test/conf.d/webserv.conf
+++ b/test/conf.d/webserv.conf
@@ -14,9 +14,14 @@ http {
 			index			index.html;
 		}
 
-		location /sandbox {
+		location > /sandbox {
 			autoindex		on;
 			allow_methods	all;
+		}
+
+		location < .bla {
+			autoindex		off;
+			allow_methods	GET HEAD;
 		}
 
 		location /images/ {
