--- a/test/conf.d/webserv.conf
+++ b/test/conf.d/webserv.conf
@@ -14,14 +14,14 @@ http {
 			index			index.html;
 		}
 
-		location > /sandbox {
+		location > /sandbox/ {
 			autoindex		on;
 			allow_methods	all;
 		}
 
 		location < .bla {
-			autoindex		off;
 			allow_methods	GET HEAD;
+			fastcgi_param		SCRIPT_FILENAME test/ubuntu_cgi_tester;
 		}
 
 		location /images/ {
@@ -31,8 +31,8 @@ http {
 			return			403;
 			return			301 http://www.google.com;
 
-			fastcgi_param	TEST testval;
-			fastcgi_pass	unix:/tmp/fastcgi.sock;
+			fastcgi_param		TEST testval;
+			fastcgi_pass		unix:/tmp/fastcgi.sock;
 		}
 
 		location /redirect {
@@ -44,7 +44,7 @@ http {
 		listen		127.0.2.1:9090;
 		server_name	www.mywebsite.com mywebsite.com;
 
-		location /html {
+		location /html/ {
 			autoindex		off;
 			root			/var/www/;
 			index			index.html;
@@ -55,7 +55,7 @@ http {
 		listen	4242;
 		index	index2.html;
 
-		location /hnogared {
+		location /hnogared/ {
 			autoindex		on;
 			root			/home/;
 		}
