solid base for cgi implementation >> TODO set all cgi parameters correctly

--- a/test/conf.d/webserv.conf
+++ b/test/conf.d/webserv.conf
@@ -20,8 +20,8 @@ http {
 		}
 
 		location < .bla {
-			allow_methods	GET HEAD;
-			fastcgi_param		SCRIPT_FILENAME test/ubuntu_cgi_tester;
+			allow_methods	POST;
+			fastcgi_param	SCRIPT_FILENAME test/ubuntu_cgi_tester;
 		}
 
 		location /images/ {
