minor improvements in cgi variables

--- a/test/conf.d/ubuntu_tester.conf
+++ b/test/conf.d/ubuntu_tester.conf
@@ -17,8 +17,14 @@ http {
 			client_max_body_size	100;
 		}
 
+		location < .bla {
+			root			test/YoupiBanane;
+			allow_methods	all;
+			fastcgi_param	SCRIPT_FILENAME test/ubuntu_cgi_tester;
+		}
+
 		location /directory {
-			allow_methods			all;
+			allow_methods			GET;
 			root					test/YoupiBanane;
 			index					youpi.bad_extension;
 		}
