cleaning up cgi execution

--- a/test/conf.d/ubuntu_tester.conf
+++ b/test/conf.d/ubuntu_tester.conf
@@ -1,3 +1,4 @@
+# Configuration to use for the 42 tester
 http {
 	server {
 		listen 9090;
@@ -12,20 +13,22 @@ http {
 			root			test/www/webserv/;
 		}
 
-		location /post_body {
+		# Prefix matching with '>'
+		location > /post_body {
 			allow_methods			POST;
 			client_max_body_size	100;
 		}
 
+		# Suffix matching with '<'
 		location < .bla {
-			root			test/YoupiBanane;
-			allow_methods	all;
-			fastcgi_param	SCRIPT_FILENAME test/ubuntu_cgi_tester;
+			root			test/www/YoupiBanane;
+			allow_methods	POST;
+			fastcgi_param	SCRIPT_FILENAME test/www/YoupiBanane/cgi-bin/ubuntu_cgi_tester;
 		}
 
 		location /directory {
 			allow_methods			GET;
-			root					test/YoupiBanane;
+			root					test/www/YoupiBanane;
 			index					youpi.bad_extension;
 		}
 	}
