added counter cgi

--- a/test/conf.d/webserv.conf
+++ b/test/conf.d/webserv.conf
@@ -14,29 +14,24 @@ http {
 			index			index.html;
 		}
 
+		location /cgi-bin/ {
+			allow_methods	GET POST;
+			fastcgi_index	counter.cgi;
+		}
+
+		location /redirect {
+			return			302 "Hello World !";
+		}
+
+		# Prefix matching
 		location > /sandbox/ {
 			autoindex		on;
 			allow_methods	all;
 		}
 
-		location /cgi-bin/ {
-			allow_methods	POST;
-			fastcgi_index	hello_world.cgi;
-		}
-
-		location /images/ {
-			root			.;
-			autoindex		off;
-
-			return			403;
-			return			301 http://www.google.com;
-
-			fastcgi_param		TEST testval;
-			fastcgi_pass		unix:/tmp/fastcgi.sock;
-		}
-
-		location /redirect {
-			return			302 "Hello World !";
+		# Suffix matching
+		location < .css {
+			root test/www/webserv/static;
 		}
 	}
 
@@ -48,6 +43,17 @@ http {
 			autoindex		off;
 			root			/var/www/;
 			index			index.html;
+		}
+
+		location /images/ {
+			root			.;
+			autoindex		off;
+
+			return			403;
+			return			301 http://www.google.com;
+
+			fastcgi_param		TEST testval;
+			fastcgi_pass		unix:/tmp/fastcgi.sock;
 		}
 	}
 
